Some little fixes
- Adding :before to the footer to avoid overlap when go to the +info anchor link

- Reducing tables font-size on mobile

- Fixing margins on the home big header columns

--- a/2020theme/sass/03-components/_04-footer.scss
+++ b/2020theme/sass/03-components/_04-footer.scss
@@ -2,6 +2,12 @@
 .site-footer{
 	width: 100%;
 	padding: 0 0 2.5rem;
+	&:before {
+		content: '';
+		display: block;
+		height: 8rem;
+		margin: -8rem 0 0;
+	}
 }
 
 #footer-widgets{
